--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@ under the License.
     <groupId>org.apache.flink</groupId>
     <artifactId>flink-table-store-trino</artifactId>
     <name>Flink Table Store : Trino</name>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3.0</version>
 
     <packaging>jar</packaging>
 
