--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@ under the License.
     <dependencies>
         <dependency>
             <groupId>org.apache.paimon</groupId>
-            <artifactId>paimon-shade</artifactId>
+            <artifactId>paimon-bundle</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -233,7 +233,7 @@ under the License.
                         <configuration>
                             <artifactSet>
                                 <includes combine.children="append">
-                                    <include>org.apache.paimon:paimon-shade</include>
+                                    <include>org.apache.paimon:paimon-bundle</include>
                                     <include>org.slf4j:slf4j-api</include>
                                     <include>org.xerial.snappy:snappy-java</include>
                                     <include>org.apache.commons:commons-lang3</include>
